--- a/plots.qmd
+++ b/plots.qmd
@@ -37,7 +37,7 @@ productions <- raw_prod %>%
   )
 
 ui <- fluidPage(
-#slider used here to filter
+
   sliderInput(
     "budget_range",
     "Budget range:",
@@ -58,7 +58,39 @@ ui <- fluidPage(
   ),
 # Output area for the plot
   plotOutput("budget_plot", height = "450px"),
+
+  tags$hr(),
+  h3("Plot 2: Productions over time"),
+
+  dateRangeInput(
+    "date_range",
+    "Start date range:",
+    start = min(productions$StartDate, na.rm = TRUE),
+    end   = max(productions$StartDate, na.rm = TRUE)
+  ),
+
+  plotOutput("timeline_plot", height = "450px"),
+
+  tags$hr(),
+  h3("Plot 3: Crew member participation"),
+
+  selectInput(
+    "p3_crew",
+    "Select crew member:",
+    choices = sort(unique(crewmembers$Name))
+  ),
+
+  checkboxGroupInput(
+    "p3_status",
+    "Filter by production status:",
+    choices = sort(unique(productions$Status)),
+    selected = sort(unique(productions$Status))
+  ),
+
+  plotOutput("crew_plot", height = "450px")
+
 )
+
 #Server side
 server <- function(input, output, session) {
 
@@ -73,10 +105,10 @@ server <- function(input, output, session) {
   }, once = TRUE)
  
 
-   #first plot/Create the budget vs completion plot
+   #first plot
   output$budget_plot <- renderPlot({
     req(input$budget_range, input$status_pick)
-#filter based on user selections
+
     df <- productions %>%
       filter(
         Budget >= input$budget_range[1],
@@ -85,7 +117,7 @@ server <- function(input, output, session) {
       )
 
     req(nrow(df) > 0)
-# Plot budget vs completion
+
     ggplot(df, aes(x = Budget, y = Success)) +
       geom_jitter(height = 0.05, alpha = 0.7) +
       geom_smooth(method = "lm", se = TRUE) +
@@ -96,15 +128,84 @@ server <- function(input, output, session) {
       ) +
       theme_minimal()
   })
- 
-    #nothing
-  #close the db 
+
+  #second plot
+  output$timeline_plot <- renderPlot({
+    req(input$date_range)
+
+    start <- as.Date(input$date_range[1])
+    end   <- as.Date(input$date_range[2])
+    req(!is.na(start), !is.na(end))
+
+    df2 <- productions %>%
+      filter(
+        !is.na(StartDate),
+        StartDate >= start,
+        StartDate <= end
+      ) %>%
+      mutate(Month = as.Date(format(StartDate, "%Y-%m-01"))) %>%
+      count(Month)
+
+    if (nrow(df2) == 0) {
+      plot.new()
+      text(0.5, 0.5, "No productions in the selected date range", cex = 1.2)
+      return(invisible())
+    }
+
+    ggplot(df2, aes(x = Month, y = n)) +
+      geom_col() +
+      scale_x_date(date_labels = "%Y-%m", date_breaks = "1 month") +
+      labs(
+        title = "Productions started per month",
+        x = "Month",
+        y = "Number of productions"
+      ) +
+      theme_minimal()
+  })
+  #third plot
+output$crew_plot <- renderPlot({
+  req(input$p3_crew, input$p3_status)
+
+  # Find the CrewID for the selected crew member name
+  crew_id <- crewmembers %>%
+    filter(Name == input$p3_crew) %>%
+    pull(CrewID) %>%
+    unique()
+
+  req(length(crew_id) > 0)
+
+  df3 <- production_crew %>%
+    filter(CrewID %in% crew_id) %>%
+    inner_join(productions, by = "ProductionID") %>%
+    filter(Status %in% input$p3_status) %>%
+    count(Status)
+
+  # 
+  if (nrow(df3) == 0) {
+    plot.new()
+    text(0.5, 0.5, "No productions found for this crew member / no data", cex = 1.2)
+    return(invisible())
+  }
+
+  ggplot(df3, aes(x = Status, y = n)) +
+    geom_col() +
+    labs(
+      title = paste("Productions by status for", input$p3_crew),
+      x = "Status",
+      y = "Number of productions"
+    ) +
+    theme_minimal()
+})
+
+  #nothing
+  # ---- Clean up DB ----
   onStop(function() {
     try(dbDisconnect(con), silent = TRUE)
   })
-} 
+}
 
-shinyApp(ui, server)  
+
+shinyApp(ui, server)
 ```
 
 
